--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "expo": "^48.0.0",
+    "expo-camera": "~13.2.1",
     "react": "18.2.0",
     "react-hook-form": "^7.45.2",
     "react-native": "0.71.7",
     "react-native-image-picker": "^5.6.0",
+    "react-native-safe-area-context": "^4.7.1",
+    "react-native-screens": "^3.23.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-video": "^5.2.1"
+    "react-native-video": "^6.0.0-alpha.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
