--- a/package.json
+++ b/package.json
@@ -10,20 +10,29 @@
     "test": "jest"
   },
   "dependencies": {
+    "@aws-amplify/ui-react-native": "^1.2.23",
+    "@react-native-async-storage/async-storage": "^1.19.1",
+    "@react-native-community/netinfo": "^9.4.1",
+    "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "amazon-cognito-identity-js": "^6.3.1",
+    "aws-amplify": "^5.3.6",
+    "aws-amplify-react-native": "^7.0.2",
     "expo": "^48.0.0",
     "expo-camera": "~13.2.1",
     "react": "18.2.0",
     "react-hook-form": "^7.45.2",
     "react-native": "0.71.7",
+    "react-native-get-random-values": "^1.9.0",
     "react-native-image-picker": "^5.6.0",
     "react-native-pager-view": "^6.2.0",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.23.0",
     "react-native-tab-view": "^3.5.2",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-video": "^6.0.0-alpha.6"
   },
