--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native": "0.71.7",
     "react-native-get-random-values": "^1.9.0",
     "react-native-image-picker": "^5.6.0",
+    "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-pager-view": "^6.2.0",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.23.0",
