--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.1",
     "@aws-amplify/ui-react-native": "^1.2.23",
     "@react-native-async-storage/async-storage": "^1.19.1",
     "@react-native-community/netinfo": "^9.4.1",
@@ -21,8 +22,11 @@
     "amazon-cognito-identity-js": "^6.3.1",
     "aws-amplify": "^5.3.6",
     "aws-amplify-react-native": "^7.0.2",
+    "aws-appsync-auth-link": "^3.0.7",
+    "aws-appsync-subscription-link": "^3.1.2",
     "expo": "^48.0.0",
     "expo-camera": "~13.2.1",
+    "graphql": "14.7.0",
     "react": "18.2.0",
     "react-hook-form": "^7.45.2",
     "react-native": "0.71.7",
