--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-image-picker": "^5.6.0",
     "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-pager-view": "^6.2.0",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.23.0",
     "react-native-tab-view": "^3.5.2",
