--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "aws-amplify-react-native": "^7.0.2",
     "aws-appsync-auth-link": "^3.0.7",
     "aws-appsync-subscription-link": "^3.1.2",
+    "dayjs": "^1.11.9",
     "expo": "^48.0.0",
     "expo-camera": "~13.2.1",
     "graphql": "14.7.0",
