--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "aws-appsync-auth-link": "^3.0.7",
     "aws-appsync-subscription-link": "^3.1.2",
     "dayjs": "^1.11.9",
-    "expo": "^48.0.0",
-    "expo-camera": "~13.2.1",
+    "expo": "^49.0.9",
+    "expo-camera": "^13.4.3",
     "graphql": "14.7.0",
     "react": "18.2.0",
     "react-hook-form": "^7.45.2",
@@ -34,6 +34,7 @@
     "react-native-get-random-values": "^1.9.0",
     "react-native-image-picker": "^5.6.0",
     "react-native-inappbrowser-reborn": "^3.7.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-pager-view": "^6.2.0",
     "react-native-popup-menu": "^0.16.1",
     "react-native-safe-area-context": "^4.7.1",
@@ -41,7 +42,8 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-video": "^6.0.0-alpha.6"
+    "react-native-video": "^6.0.0-alpha.6",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
