--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -93,9 +93,9 @@ android {
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
-    namespace "dev.notjust.photos"
+    namespace "dev.erickgram"
     defaultConfig {
-        applicationId "dev.notjust.photos"
+        applicationId "dev.erickgram"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
