--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "erickgram",
-  "version": "0.0.1",
+  "version": "1.0.2",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "postversion": "react-native-version"
   },
   "dependencies": {
     "@apollo/client": "^3.8.1",
@@ -27,7 +28,7 @@
     "dayjs": "^1.11.9",
     "expo": "^49.0.9",
     "expo-camera": "^13.4.3",
-    "graphql": "14.7.0",
+    "graphql": "15.8.0",
     "react": "18.2.0",
     "react-hook-form": "^7.45.2",
     "react-native": "0.71.7",
@@ -61,6 +62,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.9",
     "prettier": "^2.4.1",
+    "react-native-version": "^4.0.0",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
