--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
-    "postversion": "react-native-version"
+    "postversion": "npx react-native-version"
   },
   "dependencies": {
     "@apollo/client": "^3.8.1",
