feat: trigger eas build from CI

--- a/eas.json
+++ b/eas.json
@@ -19,6 +19,11 @@
     "production": {}
   },
   "submit": {
-    "production": {}
+    "production": {
+      "android": {
+        "serviceAccountKeyPath": "./service_account.json",
+        "track": "production"
+      }
+    }
   }
 }
