--- a/.github/workflows/eas-build.yaml
+++ b/.github/workflows/eas-build.yaml
@@ -27,5 +27,5 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build on EAS
-        run: eas build --profile ${{ inputs.PROFILE }} --platform ${{ inputs.PROFILE }} --non-interactive
+        run: eas build --profile ${{ inputs.PROFILE }} --platform ${{ inputs.PLATFORM }} --non-interactive
  
