--- a/.github/workflows/deploy-staging.yaml
+++ b/.github/workflows/deploy-staging.yaml
@@ -5,9 +5,61 @@ on:
     branches:
       - staging
       - dev # TODO remove when we're done with dev
+
+env:
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  AWS_REGION: ${{ secrets.AWS_REGION }}
+  AMPLIFY_FACEBOOK_CLIENT_ID: ${{ secrets.AMPLIFY_FACEBOOK_CLIENT_ID }}
+  AMPLIFY_FACEBOOK_CLIENT_SECRET: ${{ secrets.AMPLIFY_FACEBOOK_CLIENT_SECRET }}
+  AMPLIFY_GOOGLE_CLIENT_ID: ${{ secrets.AMPLIFY_GOOGLE_CLIENT_ID }}
+  AMPLIFY_GOOGLE_CLIENT_SECRET: ${{ secrets.AMPLIFY_GOOGLE_CLIENT_SECRET }}
+
 jobs:
+  deploy-backend:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18.x
+          cache: npm
+
+      # INSTALL AWS CLI
+      - name: Install and configure AWS cli
+        run: |
+          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+          unzip awscliv2.zip
+          sudo ./aws/install --update
+
+      - name: Configure AWS cli credentials
+        run: |
+          aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID --profile default
+          aws configure set aws_access_secret_access_key $AWS_ACCESS_SECRET_ACCESS_KEY --profile default
+          aws configure set default.regio $AWS_REGION
+    
+      # INSTALL AND CONFIGURE AWS AMPLIFY CLI
+      - name: Install AWS Amplify cli
+        run: |
+          npm install -g --unsafe-perm @aws-amplify/cli@latest
+          echo "amplify version $(amplify --version)"
+
+      #INITIALIZE THE BACKEND ENVIRONMENT
+      - name: Initialize backend environment
+        run: ./.github/scripts/amplify-init.sh staging
+
+      # PUSH CHANGES TO CLOUD
+      - name: Push backend changes
+        run: |
+          amplify push --yes
+
+      # COMMIT AND PUSH CHANGES TO GITHUB
+      - uses: stefanzweifel/git-auto-commit-action@v4
+  
+
   build-android:
     name: Install and build android app (Preview)
+    needs: deploy-backend
     uses: ./.github/workflows/eas-build.yaml
     secrets: inherit
     with:
@@ -16,6 +68,7 @@ jobs:
     
   build-ios:
     name: Install and build ios app (Preview)
+    needs: deploy-backend
     uses: ./.github/workflows/eas-build.yaml
     secrets: inherit
     with:
