fix: make profile not required

--- a/.github/workflows/eas-build.yaml
+++ b/.github/workflows/eas-build.yaml
@@ -6,7 +6,7 @@ on:
         required: true
         type: string
       PROFILE:
-        required: true
+        required: false
         type: string
         default: production
 jobs:
