--- a/.github/workflows/amplify-init.yaml
+++ b/.github/workflows/amplify-init.yaml
@@ -1,4 +1,5 @@
 name: Initialize Amplify environment
+
 on:
   workflow_call:
     inputs:
@@ -20,13 +21,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - uses: actions/setup-node@v3
         with:
-          node-version: 18.x
+          node-version: 20.x
           cache: npm
 
-      # Install Aws Cli
-      - name: Install and configure AWS cli
+      # Install AWS cli
+      - name: Install AWS cli
         run: |
           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
           unzip awscliv2.zip
@@ -37,45 +39,22 @@ jobs:
           aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID --profile default
           aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY --profile default
           aws configure set default.region $AWS_REGION
-    
-      # Install And Configure Aws Amplify Cli
+
+      # Install and configure AWS Amplify cli
       - name: Install AWS Amplify cli
         run: |
           npm install -g --unsafe-perm @aws-amplify/cli@latest
           echo "amplify version $(amplify --version)"
 
-      # Give Permissions For Scripts
-      - name: Set execute permissions for script
-        run: chmod +x ./.github/scripts/amplify-init.sh
-
-      # Initialize The Backend Environment
+      # Initialize the backend environment
       - name: Initialize backend environment
         run: ./.github/scripts/amplify-init.sh ${{ inputs.AMPLIFY_ENV_NAME }}
 
-      # Push Changes To Cloud
+      # Push changes to cloud
       - name: Push backend changes
         run: amplify push --yes
 
-      # Commit And Push Changes To Github
+      # Commit and push changes to github
       - uses: stefanzweifel/git-auto-commit-action@v4
-  
-
-  build-android:
-    name: Install and build android app (Preview)
-    needs: deploy-backend
-    uses: ./.github/workflows/eas-build.yaml
-    secrets: inherit
-    with:
-      PLATFORM: android
-      PROFILE: preview
-    
-  build-ios:
-    name: Install and build ios app (Preview)
-    needs: deploy-backend
-    uses: ./.github/workflows/eas-build.yaml
-    secrets: inherit
-    with:
-      PLATFORM: ios
-      PROFILE: preview
-    
- 
+        with:
+          file_pattern: src amplify
