--- a/.github/workflows/deploy-production.yaml
+++ b/.github/workflows/deploy-production.yaml
@@ -1,17 +1,18 @@
-name: Build and Deploy the app to production environment
+name: Build and Deploy the application to production environment
+
 on:
   workflow_dispatch:
+
   push:
     branches:
       - main
-      - dev # TODO remove when we're done with dev
 
 jobs:
   deploy-backend:
     name: Deploy backend to production environment
     uses: ./.github/workflows/amplify-init.yaml
     secrets: inherit
-    with: 
+    with:
       AMPLIFY_ENV_NAME: prod
 
   patch-version:
@@ -20,9 +21,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - run: git pull origin ${{ github.ref_name }}
+
       - uses: actions/setup-node@v3
         with:
-          node-version: 18.x
+          node-version: 20.x
           cache: npm
       - name: Install dependencies
         run: npm ci
@@ -33,11 +36,12 @@ jobs:
 
       - name: Patch version
         run: npm version patch
-      # Commit And Push Changes To Github
+
+      # Commit and push changes to github
       - uses: stefanzweifel/git-auto-commit-action@v4
 
   build-android:
-    name: Install and build android app (Preview)
+    name: Install and build android app (Production)
     needs: patch-version
     uses: ./.github/workflows/eas-build.yaml
     secrets: inherit
@@ -45,29 +49,10 @@ jobs:
       PLATFORM: android
       PROFILE: production
 
-  # we are not building ios for now    
-  # build-ios:
-  #   name: Install and build ios app (Production)
-  #   needs: patch-version
-  #   uses: ./.github/workflows/eas-build.yaml
-  #   secrets: inherit
-  #   with:
-  #     PLATFORM: ios
-  #     PROFILE: production
-    
- 
   submit-android:
-    name: Submit android app to Google Play Store
+    name: Submit android app to Play Store
     needs: build-android
-    uses: ./.github/workflows/eas-build.yaml
+    uses: ./.github/workflows/eas-submit.yaml
     secrets: inherit
     with:
       PLATFORM: android
-
-  submit-ios:
-    name: Submit iOS app to AppStore
-    needs: build-ios
-    uses: ./.github/workflows/eas-build.yaml
-    secrets: inherit
-    with:
-      PLATFORM: ios
