--- a/.github/workflows/deploy-staging.yaml
+++ b/.github/workflows/deploy-staging.yaml
@@ -1,17 +1,18 @@
-name: Build and Deploy the app to staging environment
+name: Build and Deploy the application to staging environment
+
 on:
   workflow_dispatch:
+
   push:
     branches:
       - staging
-      - dev # TODO remove when we're done with dev
 
 jobs:
   deploy-backend:
     name: Deploy backend to staging environment
     uses: ./.github/workflows/amplify-init.yaml
     secrets: inherit
-    with: 
+    with:
       AMPLIFY_ENV_NAME: staging
 
   build-android:
@@ -22,15 +23,3 @@ jobs:
     with:
       PLATFORM: android
       PROFILE: preview
-
-  # we are not building ios for now    
-  # build-ios:
-  #   name: Install and build ios app (Preview)
-  #   needs: deploy-backend
-  #   uses: ./.github/workflows/eas-build.yaml
-  #   secrets: inherit
-  #   with:
-  #     PLATFORM: ios
-  #     PROFILE: preview
-    
- 
