fix: setup permissions

--- a/.github/workflows/amplify-init.yaml
+++ b/.github/workflows/amplify-init.yaml
@@ -26,6 +26,12 @@ jobs:
         with:
           node-version: 20.x
           cache: npm
+          
+      # Setup permissions    
+      - name: Set up script permissions and run
+        run: |
+          chmod +x ./.github/scripts/amplify-init.sh
+          ./.github/scripts/amplify-init.sh staging
 
       # Install AWS cli
       - name: Install AWS cli
