--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -107,7 +107,7 @@
     }
   },
   "storage": {
-    "storage": {
+    "s3instagramstorage7cfc33b6": {
       "dependsOn": [],
       "providerPlugin": "awscloudformation",
       "service": "S3"
