--- a/.github/workflows/deploy-staging.yaml
+++ b/.github/workflows/deploy-staging.yaml
@@ -6,7 +6,6 @@ on:
   push:
     branches:
       - staging
-      - dev # TODO remove when we're done with dev
 
 jobs:
   deploy-backend:
@@ -23,4 +22,13 @@ jobs:
     secrets: inherit
     with:
       PLATFORM: android
+      PROFILE: preview
+
+  build-ios:
+    name: Install and build ios app (Preview)
+    needs: deploy-backend
+    uses: ./.github/workflows/eas-build.yaml
+    secrets: inherit
+    with:
+      PLATFORM: ios
       PROFILE: preview
