--- a/package.json
+++ b/package.json
@@ -5,68 +5,77 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "lint": "eslint .",
+    "ios14": "react-native run-ios --simulator='iPhone 14 Pro'",
     "start": "react-native start",
     "test": "jest",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "postversion": "npx react-native-version"
   },
   "dependencies": {
-    "@apollo/client": "^3.8.1",
-    "@aws-amplify/ui-react-native": "^1.2.23",
-    "@react-native-async-storage/async-storage": "^1.19.1",
-    "@react-native-community/netinfo": "^9.4.1",
-    "@react-native-picker/picker": "^2.4.10",
-    "@react-navigation/bottom-tabs": "^6.5.8",
-    "@react-navigation/material-top-tabs": "^6.6.3",
-    "@react-navigation/native": "^6.1.7",
-    "@react-navigation/native-stack": "^6.9.13",
-    "amazon-cognito-identity-js": "^6.3.1",
-    "aws-amplify": "^5.3.6",
-    "aws-amplify-react-native": "^7.0.2",
+    "@apollo/client": "^3.5.10",
+    "@aws-amplify/ui-react-native": "^1.2.1",
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/netinfo": "^7.1.12",
+    "@react-native-picker/picker": "^2.2.1",
+    "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/material-top-tabs": "^6.1.1",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
+    "amazon-cognito-identity-js": "^5.2.13",
+    "aws-amplify": "^5.0.7",
+    "aws-amplify-react-native": "^6.0.2",
     "aws-appsync-auth-link": "^3.0.7",
-    "aws-appsync-subscription-link": "^3.1.2",
-    "dayjs": "^1.11.9",
-    "expo": "^49.0.9",
-    "expo-camera": "^13.4.3",
-    "graphql": "15.8.0",
-    "react": "18.2.0",
-    "react-hook-form": "^7.45.2",
-    "react-native": "0.71.7",
-    "react-native-get-random-values": "^1.9.0",
-    "react-native-image-picker": "^5.6.0",
-    "react-native-inappbrowser-reborn": "^3.7.0",
+    "aws-appsync-subscription-link": "^3.0.10",
+    "dayjs": "^1.11.0",
+    "expo": ">=43.0.0-* <44.0.0",
+    "expo-camera": "~12.0.3",
+    "graphql": "^14.7.0",
+    "react": "17.0.2",
+    "react-hook-form": "^7.20.5",
+    "react-native": "0.66.3",
+    "react-native-get-random-values": "^1.8.0",
+    "react-native-image-picker": "^4.3.0",
+    "react-native-inappbrowser-reborn": "^3.6.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-pager-view": "^6.2.0",
-    "react-native-popup-menu": "^0.16.1",
-    "react-native-safe-area-context": "^4.7.1",
-    "react-native-screens": "^3.23.0",
-    "react-native-tab-view": "^3.5.2",
-    "react-native-url-polyfill": "^2.0.0",
-    "react-native-vector-icons": "^9.2.0",
-    "react-native-video": "^6.0.0-alpha.6",
-    "uuid": "^9.0.0"
+    "react-native-pager-view": "^5.4.11",
+    "react-native-popup-menu": "^0.15.12",
+    "react-native-safe-area-context": "^3.4.1",
+    "react-native-screens": "^3.10.1",
+    "react-native-tab-view": "^3.1.1",
+    "react-native-url-polyfill": "^1.3.0",
+    "react-native-vector-icons": "^9.0.0",
+    "react-native-video": "^5.2.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native-community/eslint-config": "^3.2.0",
-    "@tsconfig/react-native": "^2.0.2",
-    "@types/jest": "^29.2.1",
-    "@types/react": "^18.0.24",
-    "@types/react-native-vector-icons": "^6.4.13",
-    "@types/react-native-video": "^5.0.15",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.2.1",
-    "eslint": "^8.19.0",
-    "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "0.73.9",
-    "prettier": "^2.4.1",
+    "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.12.5",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "@types/jest": "^26.0.23",
+    "@types/react-native": "^0.66.4",
+    "@types/react-native-vector-icons": "^6.4.10",
+    "@types/react-native-video": "^5.0.10",
+    "@types/react-test-renderer": "^17.0.1",
+    "babel-jest": "^26.6.3",
+    "eslint": "^7.14.0",
+    "jest": "^26.6.3",
+    "metro-react-native-babel-preset": "^0.66.2",
     "react-native-version": "^4.0.0",
-    "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
+    "react-test-renderer": "17.0.2",
+    "typescript": "^4.4.4"
+  },
+  "resolutions": {
+    "@types/react": "^17"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   }
 }
