--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "amazon-cognito-identity-js": "^6.3.1",
-    "aws-amplify": "^4.0.0",
-    "aws-amplify-react-native": "^6.0.2",
+    "aws-amplify": "^5.3.6",
+    "aws-amplify-react-native": "^7.0.2",
     "aws-appsync-auth-link": "^3.0.7",
     "aws-appsync-subscription-link": "^3.1.2",
     "dayjs": "^1.11.9",
@@ -43,7 +43,7 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-video": "^5.2.1",
+    "react-native-video": "^6.0.0-alpha.6",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
