--- a/.github/workflows/deploy-production.yaml
+++ b/.github/workflows/deploy-production.yaml
@@ -35,7 +35,7 @@ jobs:
           git config user.name "$GITHUB_ACTOR"
 
       - name: Patch version
-        run: npx react-native-version patch
+        run: npm version patch
 
       # Commit and push changes to github
       - uses: stefanzweifel/git-auto-commit-action@v4
