--- a/.github/workflows/deploy-production.yaml
+++ b/.github/workflows/deploy-production.yaml
@@ -34,8 +34,10 @@ jobs:
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
           git config user.name "$GITHUB_ACTOR"
 
-      - name: Patch version
-        run: npm version patch
+      - name: Patch version and Add Timestamp
+        run: |
+          new_version=$(npm version patch --no-git-tag-version)
+          npm version "$new_version-$(date +%s)" --no-git-tag-version
 
       # Commit and push changes to github
       - uses: stefanzweifel/git-auto-commit-action@v4
