--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "erickgram",
-  "version": "1.0.6-1695606286864",
+  "version": "1.0.5",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
