--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -86,6 +86,21 @@
       ],
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
+    },
+    "UserFollowTrigger": {
+      "build": true,
+      "dependsOn": [
+        {
+          "attributes": [
+            "GraphQLAPIIdOutput",
+            "GraphQLAPIEndpointOutput"
+          ],
+          "category": "api",
+          "resourceName": "Instagram"
+        }
+      ],
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
     }
   },
   "parameters": {
@@ -102,6 +117,22 @@
         {
           "category": "function",
           "resourceName": "InstagramPostConfirmation"
+        }
+      ]
+    },
+    "AMPLIFY_function_UserFollowTrigger_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "UserFollowTrigger"
+        }
+      ]
+    },
+    "AMPLIFY_function_UserFollowTrigger_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "UserFollowTrigger"
         }
       ]
     }
