--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -102,6 +102,21 @@
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
     },
+    "NotificationTrigger": {
+      "build": true,
+      "dependsOn": [
+        {
+          "attributes": [
+            "GraphQLAPIIdOutput",
+            "GraphQLAPIEndpointOutput"
+          ],
+          "category": "api",
+          "resourceName": "Instagram"
+        }
+      ],
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    },
     "UserFollowTrigger": {
       "build": true,
       "dependsOn": [
@@ -148,6 +163,22 @@
         {
           "category": "function",
           "resourceName": "InstagramPostConfirmation"
+        }
+      ]
+    },
+    "AMPLIFY_function_NotificationTrigger_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "NotificationTrigger"
+        }
+      ]
+    },
+    "AMPLIFY_function_NotificationTrigger_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "NotificationTrigger"
         }
       ]
     },
