--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "aws-appsync-subscription-link": "^3.1.2",
     "dayjs": "^1.11.9",
     "expo": "^49.0.9",
-    "expo-camera": "^13.4.3",
+    "expo-camera": "^13.6.0",
     "graphql": "15.8.0",
     "react": "18.2.0",
     "react-hook-form": "^7.45.2",
@@ -57,7 +57,9 @@
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
     "@types/react-native-vector-icons": "^6.4.13",
+    "@types/react-native-video": "^5.0.19",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/uuid": "^9.0.7",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
