--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
     "jest-expo": "49",
+    "jest-fetch-mock": "^3.0.3",
     "metro-react-native-babel-preset": "0.73.9",
     "prettier": "^2.4.1",
     "react-native-version": "^4.0.0",
